micro-admin-backend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: micro-admin-backend
  #namespace: go
  labels:
    app: micro-admin-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: micro-admin-backend
  template:
    metadata:
      labels:
        app: micro-admin-backend
    spec:
      imagePullSecrets:
      - name: pipeline-docker-registry
      containers:
      - name: micro-admin-backend
        image: zetaengine/micro-admin-backend:latest
        ports:
        - containerPort: 3000

---
kind: Service
apiVersion: v1
metadata:
  name: micro-admin-backend
spec:
  selector:
    app: micro-admin-backend
  type: ClusterIP
  ports:
  - name: port3000
    port: 3000
    targetPort: 3000
