micro-challenges.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: micro-challenges
  #namespace: go
  labels:
    app: micro-challenges
spec:
  replicas: 1
  selector:
    matchLabels:
      app: micro-challenges
  template:
    metadata:
      labels:
        app: micro-challenges
    spec:
      imagePullSecrets:
      - name: pipeline-docker-registry
      containers:
      - name: micro-challenges
        image: zetaengine/micro-challenges:latest
        ports:
        - containerPort: 3001

---
kind: Service
apiVersion: v1
metadata:
  name: micro-challenges
spec:
  selector:
    app: micro-challenges
  type: ClusterIP
  ports:
  - name: port3001
    port: 3001
    targetPort: 3001
