mongo.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  labels:
    app: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      imagePullSecrets:
      - name: pipeline-docker-registry
      containers:
      - name: mongo
        image: mongo
        ports:
        - containerPort: 27017
          name: rabbit27017

---
kind: Service
apiVersion: v1
metadata:
  name: mongo
spec:
  selector:
    app: mongo
  type: ClusterIP
  ports:
  - name: port27017
    port: 27017
    targetPort: 27017
